# wizctl

./: Cargo.toml  Makefile  README.md  pyproject.toml
python/src/: messages.py  network.py
src/: .null-ls_447386_main.py  _control.rs  client.rs  color.rs  connection.rs  control.rs  devices.rs  discovery.py  lib.rs  main.py  main.rs  message.rs  messages.py  messages.rs  network.rs
src/client/: messages.rs  network.rs
src/client/messages/: _get_system_config.rs  _set_pilot.rs  error.rs  get_pilot.rs  get_system_config.rs  set_pilot.rs
src/connection/: messages.rs  network.rs
src/connection/messages/: get_model_config.rs  get_pilot.rs  get_power.rs  get_system_config.rs  set_pilot.rs
src/messages/: get_pilot.rs  set_pilot.rs
