[package]
name = "wizctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
derive-getters = "0.5.0"
error-stack = "0.5.0"
macaddr = "1.0.1"
serde = { version = "1.0.215", features=["derive"] }
serde_json = "1.0.133"
tabled = "0.17.0"
thiserror = "2.0.4"
