[package]
name = "wizctl"
version = "0.1.0"
authors = ["Maitreya Venkataswamy <maitreyakv@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wizctl"
required-features = ["cli"]

[features]
cli = ["clap", "tabled"]

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"], optional = true }
derive-getters = "0.5.0"
serde = { version = "1.0.215", features=["derive"] }
serde_json = "1.0.133"
tabled = { version = "0.17.0", optional = true }
thiserror = "2.0.6"
