[project]
name = "wizctl"
version = "0.1.0"
description = "CLI tool for controlling WiZ Connected devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
