[project]
name = "wizctl"
version = "0.1.0"
description = "CLI tool for controlling WiZ Connected devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "pydantic-extra-types>=2.10.1",
    "pydantic>=2.10.3",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
plugins = ["pydantic.mypy"]
